Some minor styling improvements; the menu now takes up the full screen and the nav buttons are larger on smaller devices. An attempt at fixing an issue with the nav-menu spilling out of the header as was noticed during testing on an iphoneX.

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ header {
   justify-content: center;
   align-items: center;
   height: 20vh;
+  min-height: fit-content;
   width: 100%;
   min-width: 375px;
   max-width: 100vw;
@@ -89,7 +90,7 @@ header {
   justify-content: center;
   gap: 3.5vh;
   font-family: sans-serif;
-  font-size: 1.6vh;
+  font-size: 2vh;
   font-style: oblique;
   width: 12.5vw;
   color: #fff;
@@ -175,6 +176,7 @@ header {
 
 .contactSquare a {
   text-decoration: none;
+  color: #ff0037;
 }
 /* End contact page */
 
@@ -208,6 +210,19 @@ footer a:hover {
 
 
 @media screen and (max-width: 500px) {
+  .navMenu {
+    font-size: 2.5vh;
+  }
+
+  .menuBorder {
+    width: 100%;
+    padding: 5vh 0;
+  }
+
+  .menuBorder img {
+    width: 100%;
+  }
+
   .description p {
     width: 70%;
     font-size: 1.8vh
